[gd_scene load_steps=4 format=3 uid="uid://773tmecjjwmr"]

[ext_resource type="Texture2D" uid="uid://bryqx02tgdn7e" path="res://menus/score_sheet/score_sheet.png" id="1_qbh63"]
[ext_resource type="Script" path="res://menus/score_sheet/section.gd" id="2_ie5sp"]
[ext_resource type="FontFile" uid="uid://bqm2bsh7ju02s" path="res://assets/ui/New Hi-Score.ttf" id="2_pwaga"]

[node name="Section" type="TextureRect"]
texture_filter = 1
texture = ExtResource("1_qbh63")
script = ExtResource("2_ie5sp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 55.0
offset_top = 9.0
offset_right = 63.0
offset_bottom = 17.0
use_top_left = true

[node name="HoleLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pwaga")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 9.0
offset_right = 80.0
offset_bottom = 17.0
use_top_left = true

[node name="ParLabel" type="Label" parent="CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pwaga")
theme_override_font_sizes/font_size = 10
text = "0"

[node name="CenterContainer3" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 89.0
offset_top = 9.0
offset_right = 97.0
offset_bottom = 17.0
use_top_left = true

[node name="ScoreLabel" type="Label" parent="CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pwaga")
theme_override_font_sizes/font_size = 10
text = "0"
